--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
 # MNNPC
 
 <!-- badges: start -->
+[![Generic badge](https://img.shields.io/badge/Version-0.9.2-green.svg)]()
 <!-- badges: end -->
 
 Minnesota Native Plant Community Classification System objects for RMAVIS  
