Adding diversity and fidelity objects

--- a/data-raw/5_generate_pseudo_quadrats_ZM.Rmd
+++ b/data-raw/5_generate_pseudo_quadrats_ZM.Rmd
@@ -132,7 +132,7 @@ pquads_duplicates <- pquads |>
 
 ```{r write_output_files}
 mnnpc_pquads <- pquads_no_duplicates
-usethis::use_data(mnnpc_pquads, internal = FALSE, overwrite = TRUE)
+usethis::use_data(mnnpc_pquads, internal = FALSE, overwrite = TRUE, compress = "xz")
 ```
 
 
