--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,20 @@ You can install the package from GitHub with:
 devtools::install_github("MN-DNR-MBS/MNNPC")
 ```
 
+## Terms of use
+
+To help highlight use of relevé data outside of the Minnesota Department of Natural Resources (DNR) and to protect the DNR's copyright interest in these data, users are asked to acknowledge the DNR's Minnesota Biological Survey Program as the source of information in any product derived from the relevé data, and to include in any product an appropriate copyright notice in the name of the DNR (for example, Copyright 2026 State of Minnesota, Department of Natural Resources). Products include hard copy or digital versions of studies, summaries, reports, maps, proposals, plans, analyses, interpretations, derivative works, and compilations containing relevé data. If you have any questions about the data or its use, please contact:
+
+Daniel Wovcha
+500 Lafayette Rd., Box 25
+St. Paul, MN 55155
+
+(651) 259-5154
+Daniel.Wovcha@state.mn.us
+
+
 ## Acknowledgements
+
 This package was developed by Amy Kendig, Zeke Marshall, and Alaina Berger. Funding for this project was provided by the Minnesota Environment and Natural Resources Trust Fund as recommended by the Legislative-Citizen Commission on Minnesota Resources (LCCMR).
 
 ## Citation
